--- a/itrainee.html
+++ b/itrainee.html
@@ -152,7 +152,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h4>ITrainee Fórum</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum tenetur cupiditate nostrum, sint ipsam neque! Nulla illo magnam minus commodi.</p>
+                <p>O ITrainee foi criado a partir de um projeto integrador da faculdade, foi desenvolvido por Nayana Heslley, Gabriela Rodrigues, Raica dos Reis, Wilker Cavalcante e Lucas Andrade.</p>
             </div>
             
             <div class="footer-section">
