--- a/projeto-integrador.html
+++ b/projeto-integrador.html
@@ -20,21 +20,21 @@
     </nav>
 
     <section class="hero">
-        <h1>PROJETO INTEGRADOR</h1>
+        <h1>PROJETO INTEGRADOR: ITrainee</h1>
         <p>Transforme seu potencial em experiência com o iTrainee: onde o futuro dos profissionais começa hoje!</p>
     </section>
 
     <!-- Sobre o Projeto -->
     <section class="about-project-section" id="sobre-o-projeto">
-        <div class="section-title-container">
-          <h2 class="section-title">Sobre o Projeto</h2>
+        <div class="section-title-container-pj">
+          <h2 class="section-title-pj">Sobre o Projeto</h2>
         </div>
         <div class="about-container">
           <div class="project-content">
             <div class="project-text">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur in ut vero corrupti voluptas et, officiis, velit molestiae quam unde doloremque at dicta recusandae vitae architecto soluta magnam repudiandae similique, tenetur distinctio eius expedita. Nam sequi consequatur soluta numquam ipsa.</p>
+                <p>O iTrainee é uma plataforma que conecta estudantes e recém-formados a vagas de estágio e programas de trainee em diversas áreas. O site oferece uma navegação simples, permitindo que os usuários filtrem oportunidades por área de interesse, localização e requisitos, facilitando a busca por emprego.</p>
                 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum nihil facere amet nisi, repellendus fugit eos dolorum molestiae qui voluptate odio possimus reiciendis voluptas eveniet?</p>
+                <p>Além das vagas de estágio, o iTrainee também disponibiliza conteúdos exclusivos, como um fórum de orientações sobre o mercado de trabalho e dicas para otimizar o perfil profissional. A plataforma tem como objetivo oferecer suporte completo aos candidatos, ajudando-os a se destacar e a conquistar a oportunidade ideal de estágio ou trainee.</p>
             </div>
             <div class="project-image">
                 <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Print do projeto">
@@ -48,8 +48,8 @@
 
     <!-- Como foi feito -->
     <section class="carousel-section" id="como-foi-feito">
-        <div class="section-title-container">
-        <h2 class="section-title">Como foi feito</h2>
+        <div class="section-title-container-pj">
+        <h2 class="section-title-pj">Fotos do projeto</h2>
     </div>
         <div class="carousel-container">
            <div class="carousel-arrow left-arrow" onclick="moveCarousel('carousel1', -1)">
@@ -75,8 +75,8 @@
 
     <!-- Desenvolvedores -->
     <section class="carousel-section dev-section" id="desenvolvedores">
-        <div class="section-title-container">
-        <h2 class="section-title">Desenvolvedores</h2>
+        <div class="section-title-container-pj">
+        <h2 class="section-title-pj">Desenvolvedores</h2>
     </div>
     <div class="carousel-container">
         <div class="carousel-arrow left-arrow" onclick="moveCarousel('carousel2', -1)">
