--- a/itrainee.html
+++ b/itrainee.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <a href="#" class="logo">ITrainee</a>
         <div class="nav-links">
-            <a href="#" class="active">Vagas</a>
+            <a href="itrainee.html" class="active">Vagas</a>
             <a href="forum.html">Fórum</a>
             <div class="profile-icon">
                 <a href="perfil.html" class="nav-link profile-icon">
