--- a/projeto-integrador.html
+++ b/projeto-integrador.html
@@ -88,23 +88,23 @@
         <div class="carousel" id="carousel2">
             <div class="carousel-item" style="background-image: url('https://via.placeholder.com/800x400?text=Dev+1')">
                 <span class="carousel-text">Desenvolvedor 1</span>
-                <div class="hover-text">Gabriela Rodrigues</div>
+                <div class="hover-text">Gabriela Rodrigues: </div>
             </div>
             <div class="carousel-item" style="background-image: url('https://via.placeholder.com/800x400?text=Dev+2')">
                 <span class="carousel-text">Desenvolvedor 2</span>
-                <div class="hover-text">Nayana Oliveira</div>
+                <div class="hover-text">Nayana Oliveira: </div>
             </div>
             <div class="carousel-item" style="background-image: url('https://via.placeholder.com/800x400?text=Dev+3')">
                 <span class="carousel-text">Desenvolvedor 3</span>
-                <div class="hover-text">Lucas Andrade</div>
+                <div class="hover-text">Lucas Andrade: </div>
             </div>
             <div class="carousel-item" style="background-image: url('https://via.placeholder.com/800x400?text=Dev+4')">
                 <span class="carousel-text">Desenvolvedor 4</span>
-                <div class="hover-text">Raica dos Reis</div>
+                <div class="hover-text">Raica dos Reis: </div>
             </div>
             <div class="carousel-item" style="background-image: url('https://via.placeholder.com/800x400?text=Dev+5')">
                 <span class="carousel-text">Desenvolvedor 5</span>
-                <div class="hover-text">Wilker Cavalcante</div>
+                <div class="hover-text">Wilker Cavalcante: </div>
             </div>
             <div class="carousel-item" style="background-image: url('https://via.placeholder.com/800x400?text=Dev+5')">
                 <span class="carousel-text">Todos os desenvolvedores</span>
