--- a/forum.html
+++ b/forum.html
@@ -25,13 +25,23 @@
     <main class="main-container">
         <section class="search-section">
             <div class="search-bar">
-                <input type="text" id="searchInput" class="search-input" placeholder="Buscar tópicos...">
-                <button onclick="searchThreads()" class="search-button"><i class="fas fa-search"></i></button>
+                <input type="text" class="search-input" placeholder="Pesquisar estágio">
+                <div class="search-controls">
+                    <button class="apply-btn">Buscar</button>
+                </div>
+            </div>
+
+            <div class="job-tags">
+                <span class="tag">Desenvolvedor</span>
+                <span class="tag">Back-end</span>
+                <span class="tag">Front-End</span>
+                <span class="tag">Design</span>
             </div>
         </section>
+
         <section class="thread-list">
             <!-- Tópico 1 -->
-            <article class="thread-card">
+            <article class="thread-card" data-category="js">
                 <div class="thread-header">
                     <h3 class="thread-title">Como começar com JavaScript?</h3>
                     <span class="thread-author">por @dev_iniciante</span>
@@ -44,28 +54,54 @@
             </article>
 
             <!-- Tópico 2 -->
-            <article class="thread-card">
+            <article class="thread-card" data-category="html">
                 <div class="thread-header">
-                    <h3 class="thread-title">Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
-                    <span class="thread-author">por @dev_iniciante</span>
+                    <h3 class="thread-title">Dicas para melhorar seu CSS</h3>
+                    <span class="thread-author">por @css_lover</span>
                 </div>
-                <p class="thread-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet cupiditate deleniti corrupti labore minima sunt.</p>
+                <p class="thread-content">Confira algumas dicas para escrever CSS mais eficiente e organizado.</p>
                 <div class="thread-footer">
-                    <span>15 respostas</span>
-                    <span>Última resposta: 2h atrás</span>
+                    <span>10 respostas</span>
+                    <span>Última resposta: 1h atrás</span>
                 </div>
             </article>
 
             <!-- Tópico 3 -->
-            <article class="thread-card">
+            <article class="thread-card" data-category="node">
                 <div class="thread-header">
-                    <h3 class="thread-title">Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
-                    <span class="thread-author">por @dev_iniciante</span>
+                    <h3 class="thread-title">Criando APIs com Node.js</h3>
+                    <span class="thread-author">por @backend_dev</span>
                 </div>
-                <p class="thread-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet cupiditate deleniti corrupti labore minima sunt.</p>
+                <p class="thread-content">Aprenda a criar APIs robustas usando Node.js e Express.</p>
                 <div class="thread-footer">
-                    <span>15 respostas</span>
-                    <span>Última resposta: 2h atrás</span>
+                    <span>20 respostas</span>
+                    <span>Última resposta: 3h atrás</span>
+                </div>
+            </article>
+
+            <!-- Tópico 4 -->
+            <article class="thread-card" data-category="react">
+                <div class="thread-header">
+                    <h3 class="thread-title">Introdução ao React</h3>
+                    <span class="thread-author">por @react_fan</span>
+                </div>
+                <p class="thread-content">Descubra os conceitos básicos do React e como começar a usá-lo.</p>
+                <div class="thread-footer">
+                    <span>25 respostas</span>
+                    <span>Última resposta: 4h atrás</span>
+                </div>
+            </article>
+
+            <!-- Tópico 5 -->
+            <article class="thread-card" data-category="others">
+                <div class="thread-header">
+                    <h3 class="thread-title">Discussão Geral</h3>
+                    <span class="thread-author">por @forum_admin</span>
+                </div>
+                <p class="thread-content">Um espaço para discutir qualquer assunto relacionado a desenvolvimento.</p>
+                <div class="thread-footer">
+                    <span>5 respostas</span>
+                    <span>Última resposta: 30m atrás</span>
                 </div>
             </article>
         </section>
