--- a/login/login.html
+++ b/login/login.html
@@ -44,7 +44,7 @@
                 
                 <div class="social-icons">
                     <a href="https://accounts.google.com/v3/signin/identifier?checkedDomains=youtube&continue=https%3A%2F%2Fwww.google.com.br%2F&ddm=1&dsh=S-1006260094%3A1733338784778466&ec=GAZAmgQ&flowEntry=ServiceLogin&flowName=GlifWebSignIn&hl=pt-BR&ifkv=AcMMx-fNOO_o4tr4GIXy-QBmcxmBdeauku534-gzoXtdEpa87hEu63NY4ajV1mG9PGmwYXoD5YafyQ&pstMsg=1"><i class='bx bxl-google'></i></a>
-                    <a href="https://br.linkedin.com/company/login-innovation"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.linkedin.com/login/pt-br"><i class='bx bxl-linkedin'></i></a>
                     <a href="https://github.com/login?return_to=https%3A%2F%2Fgithub.com%2Fsignup%3Fref_cta%3DSign%2Bup%26ref_loc%3Dheader%2Blogged%2Bout%26ref_page%3D%252F%26source%3Dheader-home"><i class='bx bxl-github'></i></a>
                 </div>
             </form>
