--- a/perfil.html
+++ b/perfil.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <a href="#" class="logo">ITrainee</a>
         <div class="nav-links">
-            <a href="vagas.html" class="nav-link">ITrainee</a>
+            <a href="itrainee.html" class="nav-link">ITrainee</a>
             <a href="forum.html" class="nav-link">Fórum</a>
             <div class="profile-icon">
                 <a href="#perfil" class="nav-link profile-icon">
@@ -26,7 +26,7 @@
         <section class="new-thread-section">
             <div class="profile-photo-card">
                 <div class="photo-upload">
-                    <img src="avatar-placeholder.png" alt="" id="profilePhoto">
+                    <img src="avatar-placeholder.png" id="profilePhoto">
                     <div class="upload-overlay">
                         <input type="file" id="photoInput" accept="image/*">
                         <label for="photoInput"><i class="fas fa-camera"></i></label>
@@ -63,6 +63,7 @@
                         <div class="form-group">
                             <label>Experiência</label>
                             <select>
+                                <option>Sem experiência</option>
                                 <option>1-3 anos</option>
                                 <option>3-5 anos</option>
                                 <option>5+ anos</option>
@@ -77,6 +78,10 @@
 
                 <div class="form-group">
                     <h3><i class="fas fa-lock"></i> Segurança</h3>
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input type="password" placeholder="Confirme seu email">
+                    </div>
                     <div class="form-group">
                         <label>Alterar Senha</label>
                         <input type="password" placeholder="Nova senha">
