--- a/perfil.html
+++ b/perfil.html
@@ -93,10 +93,14 @@
                 </div>
 
                 <div class="form-actions">
+                    <input type="file" id="fileInput" name="myFile" style="display: none;">
                     <button type="reset" class="cancel-btn">Cancelar</button>
                     <button type="submit" class="submit-btn">
                         <i class="fas fa-save"></i> Salvar Alterações
                     </button>
+                    <label for="fileInput" class="import-btn">
+                        <i class="fas fa-upload"></i> Importe seu currículo
+                    </label>
                 </div>
             </form>
         </section>
@@ -106,17 +110,26 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h4>ITrainee</h4>
-                <p>O ITrainee foi criado a partir de um projeto integrador da faculdade, foi desenvolvido por Nayana Heslley, Gabriela Rodrigues, Raica dos Reis, Wilker Cavalcante e Lucas Andrade.</p>
+                <p>O ITrainee foi criado a partir de um projeto integrador da faculdade, desenvolvido por Nayana Heslley, Gabriela Rodrigues, Raica dos Reis, Wilker Cavalcante e Lucas Andrade.</p>
             </div>
             <div class="footer-section">
                 <h4>Links Rápidos</h4>
                 <ul class="footer-links">
                     <li><a href="itrainee.html">ITrainee</a></li>
                     <li><a href="forum.html">Fórum</a></li>
-                    <li><a href="perfil.html">perfil</a></li>
-                    <li><a href="projeto-integrador.html">Sobre nós</a></li>
+                    <li><a href="perfil.html">Perfil</a></li>
                 </ul>
             </div>
+            <div class="footer-section">
+                <h4>Sobre nós</h4>
+                <ul class="footer-links">
+                    <li><a href="projeto-integrador.html">Informações do site</a></li>
+                    <li><a href="#"></a>Desenvolvedores</li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p class="copyright">&copy; 2023 ITrainee. Todos os direitos reservados.</p>
         </div>
     </footer>
 
